--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
+/*
+This is part of LaunchCode Unit-3 class for front-end development.
+Uses HTML, CSS styling, AJAX and Javascript.
+Created by Radhakrishnan Pillai for LaunchCode Unit-3
+
+This Launchcode unit-3 assaignement addresses one of the classic problems in computer science of how to 
+optimally implement a web page that displays GIFs of the Jackson 5.
+*/
+
 .row {
   margin: 10px;
 }
